app/styles/layout/body.scss
html {
  background-color: var(--background-color);
  color: var(--text-purple);
  font-family: Yantramanav, sans-serif;
  height: 100%;
  padding: 15px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--header-orange);
  font-family: "Crimson+Text", serif;
  margin: 0;
  padding: 0;
}

h1 {
  @include font-size("xxl");
}

h2 {
  @include font-size("xl");
}

h3 {
  @include font-size("xl");
}

h4 {
  @include font-size("large");
}

h5 {
  @include font-size("medium");
}

h6 {
  @include font-size("base");
}

a {
  color: var(--link-blue);
  text-decoration: none;
}

p {
  margin-bottom: 1rem;
  @include paragraph-line-height;

  a {
    text-decoration: underline;
  }
}

img {
  max-width: 100%;
}

body {
  min-height: 100%;
  margin: 0;
  padding: 0.5rem;

  border-radius: 0.5rem;
  background-color: var(--body-background-color);

  display: grid;
  grid-template-areas:
    "header navigation"
    "main main"
    "footer footer";
  grid-template-rows: auto 1fr auto;

  @media (max-width: 1000px) {
    grid-template-areas:
      "header"
      "navigation"
      "main"
      "footer";
    grid-template-rows: auto auto 1fr auto;
    grid-template-columns: 1fr;
  }

  & > header {
    border-bottom: 1px solid var(--text-grey);
    grid-area: header;
    & a {
      vertical-align: middle;
    }

    & img {
      border-radius: 50%;
      padding: 5px;
      width: 60px;
      vertical-align: middle;
    }
  }

  & > nav {
    border-bottom: 1px solid var(--text-grey);
    grid-area: navigation;
    display: flex;
    justify-content: flex-end;

    & ul {
      display: flex;
      flex-direction: row;
      list-style-type: none;
    }

    & li {
      padding-right: 1rem;
    }
  }

  & > main {
    grid-area: main;
    min-width: 0;
    padding: 2em;
  }

  & > footer {
    grid-area: footer;
    display: flex;
    justify-content: flex-end;
    & ul {
      display: flex;
      flex-direction: row;
      @include font-size("large");
      list-style-type: none;
      margin: 0;
      padding: 0;

      & svg {
        margin-left: 1rem;
      }
    }

    & li {
      padding-right: 1rem;
    }
  }
}

a:active,
a:visited {
  color: var(--link-blue);
}

